# project1_sofiyskiy_dmitriy_M25-555

./: .gitignore  README.md  demo.cast  makefile  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
