[tool.poetry]
packages = [
     { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[project]
name = "project1-sofiyskiy-dmitriy-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Sofiyskiy",email = "sof-85@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
