[tool.poetry]
name = "project1-sofiyskiy-dmitriy-m25-555"
version = "0.1.0"
description = ""
authors = ["Sofiyskiy Dmitry"]
readme = "README.md"
 packages = [
     { include = "labyrinth_game" },
 ]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
project = "labyrinth_game.main:main" 

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
